--- a/css/members.css
+++ b/css/members.css
@@ -14,43 +14,32 @@ body
 }
 
 
-
-
 #headers 
 {
     height: auto;
     width: auto;
     
-    background-color: #5AB23D;
+    background-color:#000000;
     text-align: center;
     
 }
 
-#about 
+.container{
+	margin:0 auto;
+	max-width:580px;
+	width:95%
+}
+
+#nav 
 {
     height: auto;
     width: auto;
     
-    background-color: #38243b;
-
-    
+    background-color: #5AB23D;
 }
 
-
-
-img
-{
-    position: relative; 
-    width: 50.5px; 
-     height: 77px;
-    top: 25px; 
-    text-align: center;
-}
-
-path
-{
-    display: inline-block;
-    height: 100px;
+.z-depth-1,nav,.card-panel,.card,.toast,.btn,.btn-large,.btn-small,.btn-floating,.dropdown-content,.collapsible,.sidenav{
+	
 }
 
 svg
@@ -58,61 +47,70 @@ svg
     display: block;
 }
 
-.col.s8.push-s2.m8.push-m2.l3.push-l8 img
+path
 {
-    height: 100%;
-    width: 100%;
+    display: inline;
 }
 
-.col.s10.push-s1.m10.push-m1.l5.pull-l1
+.row .col.s2{
+	width: 11.6666666667%;
+	margin-left:auto;
+	left:auto;
+	right:auto;
+}
+.row .col.s3{
+	width:16%;
+	margin-left:auto;
+	left:auto;
+	right:auto
+}
+
+.row .col.s4{
+	width:16.3333333333%;
+	margin-left:auto;
+	left:auto;
+	right:auto
+}
+
+ul
 {
-    margin-top: 9em;
-    background-color: #000000;
-    border-radius: 10px;
-    border: 10px;
-    border-color: green;
-    border-style: solid;
+    padding: 0;
 }
 
-.col.s12.m12.l4
+img
 {
-    margin-top: 9em;
-    background-color: #000000;
-    border-radius: 10px;
-    border: 10px;
-    border-color: green;
-    border-style: solid;
+    position: relative; 
+    width: 40.5px; 
+     height: 60px;
+    top: 05px; 
+    text-align: center;
 }
 
-.carousel{
-	/* overflow:hidden; */
-	/* position:relative; */
-	/* width:100%; */
-	height:1000px;
-	-webkit-perspective:500px;
-	perspective:500px;
-	-webkit-transform-style:preserve-3d;
-	transform-style:preserve-3d;
-	-webkit-transform-origin:0% 50%;
-	transform-origin:0% 50%;
-	margin: 20px;
+.box
+{
+        padding-top: 5em;
+        margin:0 auto;
+        max-width:1280px;
+        width:95%
 }
 
-.carousel.carousel-slider .carousel-item{
-	width:100%;
-	height:100%;
-	min-height: auto;
-	top:0;
-	left:0
+.box img
+{
+    height: auto;
+    width: auto;
 }
 
-.carousel .carousel-item{
-	visibility:hidden;
-	width:200px;
-	
-	
-	top:0;
-	left:0
+#box
+{
+    height: auto;
+    width: auto;
+    background-color: #7B328A;
+    /* text-align: center; */
+}
+
+.row
+{
+    margin: 0;
 }
 
 
@@ -148,6 +146,7 @@ h5
     letter-spacing: 2px;
     margin: 10px;
 }
+
 
 
 
